[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameInterface/Pause.gd" type="Script" id=1]
[ext_resource path="res://title_screen/fonts/bebas_36.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="CanvasLayer" type="CanvasLayer"]

layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Pause" type="Control" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 961.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Overlay" type="ColorRect" parent="Pause" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.558039 )

[node name="resumeBtn" type="Button" parent="Pause/Overlay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 474.0
margin_top = 164.0
margin_right = 572.0
margin_bottom = 206.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = false
align = 1
_sections_unfolded = [ "Pause", "custom_fonts", "custom_styles" ]

[node name="saveBtn" type="Button" parent="Pause/Overlay" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 456.0
margin_top = 234.0
margin_right = 590.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save Game"
flat = false
align = 1
_sections_unfolded = [ "Pause", "custom_fonts", "custom_styles" ]

[node name="menuBtn" type="Button" parent="Pause/Overlay" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 456.0
margin_top = 302.0
margin_right = 591.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1
_sections_unfolded = [ "Visibility", "custom_fonts", "custom_styles" ]

[node name="pauseBtn" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 985.0
margin_top = 13.0
margin_right = 1017.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "I I"
flat = false
align = 1
_sections_unfolded = [ "Visibility", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="Pause/Overlay/resumeBtn" to="Pause" method="_on_resumeBtn_pressed"]

[connection signal="pressed" from="Pause/Overlay/saveBtn" to="Pause" method="_on_saveBtn_pressed"]

[connection signal="pressed" from="Pause/Overlay/menuBtn" to="Pause" method="_on_menuBtn_pressed"]

[connection signal="pressed" from="pauseBtn" to="Pause" method="_on_pauseBtn_pressed"]


